examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/check_inr.st
// ERROR_AMBIGUOUS_SUM_TYPE
language core;

extend with #sum-types;


fn main(succeed : Bool) -> Nat+Bool {
  return inr(0)
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
